--- a/solution/index.html
+++ b/solution/index.html
@@ -89,6 +89,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
     <!-- JS: Application -->
+    <script type="text/javascript" src="static/js/districtmap.js"></script>
     <script type="text/javascript" src="static/js/districtfilter.js"></script>
     <script type="text/javascript" src="static/js/timedaychart.js"></script>
     <script type="text/javascript" src="static/js/dowchart.js"></script>
