--- a/solution/index.html
+++ b/solution/index.html
@@ -10,6 +10,7 @@
 
     <!-- CSS: Application -->
     <link rel="stylesheet" href="static/css/styles.css">
+    <link rel="stylesheet" href="static/css/d3Style.css">
 
 </head>
 <body>
@@ -82,6 +83,7 @@
 
     <!-- JS: D3 -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.9.1/d3-tip.js"></script>
 
     <!-- JS: Bootstrap -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>    
